# visual-computing-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: test.pts
shaders/: marker.fs  marker.vs  point_cloud.fs  point_cloud.vs
src/: camera.cpp  camera.hpp  main.cpp  menu.cpp  menu.hpp  point_renderer.cpp  point_renderer.hpp  shader.cpp  shader.hpp
